sdk_tests/tests/pbc_contract_codegen/fail/empty_action.rs
#![no_main]
use pbc_contract_codegen::{action};

#[action]
pub fn action() {}
